[package]
name = "nhk_now"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "^0.4" }
clap = { version = "^4.1", features = ["derive", "env"] }
bevy = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
hyper = { version = "^0.14", features = ["full"] }
hyper-tls = { version = "^0.5" }
reqwest = "0.11.16"
serde_json = { version = "^1.0" }
tokio = { version = "^1.26", features = ["full"] }
futures-lite = "1.13.0"
async-compat = "0.2.1"
bytes = "1.4.0"
serde = "1.0.159"
