[package]
name = "nhk_now"
version = "0.2.0"
edition = "2021"

[dependencies]
chrono = { version = "^0.4" }
clap = { version = "^4.5", features = ["derive", "env"] }
iced = { version = "^0.13", features = ["wgpu", "tokio", "image"]}
once_cell = "^1.19"
reqwest = "^0.12"
serde_json = { version = "^1.0" }
# futures-lite = "1.13"
# async-compat = "0.2"
# bytes = "1.4"
serde = "^1.0"
